--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -2,8 +2,10 @@
     "wallet": "Wallet",
     "persona": "Persona",
     "unsupported_network": "Unsupported Network",
-    "connect_wallet__other_user_tip_intro": "Wallets not found. You can try as following:Broswer user's tweets;Get persona information by requiring this user to post encrypted tweets.If doesn't work, this user might not connect wallets yet.",
-    "connect_wallet_tip_intro": "Connect your wallet here.",
+    "connect_wallet__other_user_tip_intro": "Wallets not found. You can try as following",
+    "connect_wallet_other_user_tip1": "1. Broswer user’s tweets;",
+    "connect_wallet_other_user_tip2": "2. Get persona information by requiring this user to post encrypted tweets.",
+    "connect_wallet_other_user_warning": "If doesn’t work, this user might not connect wallets yet.",
     "connect_wallet_tip": "In this Web 3 section, you can show your address for receiving tips, your NFT collection, donation records, and other on-chain information to friends who have installed Mask Network.",
     "verify_wallet_intro": "Verify your wallet here.",
     "verify_wallet": "In this Web 3 section, you can show your address for receiving tips, your NFT collection, donation records, and other on-chain information to friends who have installed Mask Network.",
