feat: integrate tip into next.id

--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -31,5 +31,12 @@
     "unbind_persona_tip": "Choose either your Persona or the currently connected wallet to sign to disconnect.",
     "unbind_wallet_tip": "Choose either your Persona or the currently connected wallet to sign to disconnect.",
     "done": "Done",
-    "copy_success_of_wallet_address": "Copy wallet address successfully!"
+    "copy_success_of_wallet_address": "Copy wallet address successfully!",
+    "tip_to": "To",
+    "token_insufficient_balance": "Insufficient balance",
+    "tip_type_token": "Token",
+    "tip_type_nft": "NFT",
+    "send_tip": "Send",
+    "sending_tip": "Sending...",
+    "nft_not_belongs_to_you": "It doesn't belongs to you"
 }
