--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -2,15 +2,15 @@
     "wallet": "Wallet",
     "persona": "Persona",
     "unsupported_network": "Unsupported Network",
-    "connect_wallet__other_user_tip_intro": "Wallets not found. You can try as following",
-    "connect_wallet_other_user_tip1": "1. Broswer user’s tweets;",
-    "connect_wallet_other_user_tip2": "2. Get persona information by requiring this user to post encrypted tweets.",
-    "connect_wallet_other_user_warning": "If doesn’t work, this user might not connect wallets yet.",
+    "connect_wallet__other_user_tip_intro": "Wallets not found.",
+    "connect_wallet_other_user_tip1": "1. Switch to the user’s tweets page and back.",
+    "connect_wallet_other_user_tip2": "2. Invite the user to install the Mask extension and post a verification tweet.",
+    "connect_wallet_other_user_instruction": "The user might have not connected wallets yet. You can try as following:",
     "connect_wallet_tip": "In this Web 3 section, you can show your address for receiving tips, your NFT collection, donation records, and other on-chain information to friends who have installed Mask Network.",
     "verify_wallet_intro": "Verify your wallet here.",
-    "verify_wallet": "In this Web 3 section, you can show your address for receiving tips, your NFT collection, donation records, and other on-chain information to friends who have installed Mask Network.",
+    "verify_wallet": "In the Web3 tab, you can show your wallet addresses for receiving tips, NFT collections, donation records, and other on-chain feeds to friends who have also installed the Mask extension.",
     "verify_Twitter_ID_intro": "Verify your Twitter ID here.",
-    "verify_Twitter_ID": "In this Next.ID section, you need to verify your Twitter ID to use Next.ID-based products.",
+    "verify_Twitter_ID": "You can verify your Twitter ID with Next.ID to enhance your Web3 experience.",
     "verify_other_Twitter_ID_intro": "This user has not connected wallets here.",
     "verify_Twitter_ID_button": "Verify your Twitter ID",
     "verify_wallet_button": "Verify your wallet",
@@ -41,6 +41,7 @@
     "done": "Done",
     "confirm": "Confirm",
     "cancel": "Cancel",
+    "delete": "Delete",
     "copy_success_of_wallet_address": "Copy wallet address successfully!",
     "disconnect_warning": "This wallet will no longer show up in your web 3 profile page. Your Mask friends can no longer give tips to this wallet, or browse NFTs, donations and other on-chain information of this address."
 }
