fixup! feat: integrate tip into next.id

--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -38,5 +38,5 @@
     "tip_type_nft": "NFT",
     "send_tip": "Send",
     "sending_tip": "Sending...",
-    "nft_not_belongs_to_you": "It doesn't belongs to you"
+    "nft_not_belong_to_you": "It doesn't belong to you"
 }
