feat: improve nft lucky drop (#5781)
* chore: nft lucky drop improve

* feat: non enumerable nfts preview

* fix: conflict

* chore: nftscan only mainnet

* fix: mf 165

* chore: ui style

* fix: reply qa

* fix: add loading ui

* chore: no share for refund

* fix: small fix

--- a/packages/mask/shared-ui/locales/zh-CN.json
+++ b/packages/mask/shared-ui/locales/zh-CN.json
@@ -361,7 +361,6 @@
     "plugin_red_packet_description_broken": "此红包已被损坏。",
     "plugin_red_packet_description_failover": "{{shares}} 份额 / {{total}} {{symbol}} 总金额",
     "plugin_red_packet_claiming_from": "正在认领来自 {{name}} 的红包",
-    "plugin_red_packet_refunding_for": "{{balance}} {{symbol}} 红包正在退款",
     "plugin_red_packet_amount_per_share": "单个份额",
     "plugin_red_packet_send_symbol": "发送 {{amount}} {{symbol}}",
     "plugin_red_packet_amount_total": "总额",
@@ -384,7 +383,7 @@
     "plugin_red_packet_nft_total_amount": "总数",
     "plugin_red_packet_nft_select_collection": "选择您的收藏品系列",
     "plugin_red_packet_nft_max_shares": "NFT红包合约最多支持 {{amount}} 个NFT投放。",
-    "plugin_red_packet_nft_max_shares_tip": "NFT红包合约最多支持 {{amount}} 个NFT投放。",
+    "plugin_red_packet_nft_max_shares_tip": "NFT红包合约支持一次性选择 {{amount}} 个NFT。",
     "plugin_red_packet_nft_shift_select_tip": "您也可以使用 <text>{{text}}</text> 选择多个NFT。",
     "plugin_red_packet_nft_non_existed_tip": "Token ID <tokenIdList></tokenIdList> 不存在或不属于您。",
     "plugin_red_packet_nft_select_all_option": "全部 ({{total}} NFT)",
