--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -369,7 +369,6 @@
     "plugin_red_packet_description_broken": "The Lucky Drop is broken.",
     "plugin_red_packet_description_failover": "{{shares}} shares / {{total}} {{symbol}}",
     "plugin_red_packet_claiming_from": "Claiming Lucky Drop from {{name}}",
-    "plugin_red_packet_refunding_for": "Refunding Lucky Drop for {{balance}} {{symbol}}",
     "plugin_red_packet_amount_per_share": "Amount per Share",
     "plugin_red_packet_send_symbol": "Send {{amount}} {{symbol}}",
     "plugin_red_packet_amount_total": "Amount Total",
@@ -392,11 +391,12 @@
     "plugin_red_packet_nft_total_amount": "Total Amount",
     "plugin_red_packet_nft_select_collection": "Choose your collection",
     "plugin_red_packet_nft_max_shares": "The maximum number of NFTs to be sold in NFT lucky drop contract is {{amount}}.",
-    "plugin_red_packet_nft_max_shares_tip": "The collection lucky drop contract supports up to {{amount}} NFTs for sale.",
+    "plugin_red_packet_nft_max_shares_tip": "The NFT lucky drop supports up to {{amount}} NFTs selected for one time.",
     "plugin_red_packet_nft_shift_select_tip": "You can also use <text>{{text}}</text> to select multiple NFTs.",
     "plugin_red_packet_nft_non_existed_tip": "Token ID <tokenIdList></tokenIdList> does not exist or belong to you.",
     "plugin_red_packet_nft_select_all_option": "ALL ({{total}} NFT)",
     "plugin_red_packet_nft_select_partially_option": "Select partially",
+    "plugin_red_packet_nft_unapproved_tip": "You can get the rest of your NFTs back after 24 hours of sending.",
     "plugin_red_packet_nft_approve_all_tip": "Note: When selecting approve all, all NFTs in the contract will be authorized for sale by default, including the NFTs transfered later.",
     "plugin_red_packet_completed": "Completed",
     "plugin_red_packet_expired": "Expired",
