feat(omen): plugin that integrates the decentralized prediction market platform Omen

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -1029,5 +1029,29 @@
     "plugin_artblocks_smt_wrong": "Something went wrong!",
     "plugin_artblocks_share": "I just purchased a beautiful piece of art from '{{name}}' collection for {{price}} {{symbol}}. Install @realMaskNetwork to get yours.",
     "plugin_artblocks_share_no_official_account": "I just purchased a beautiful piece of art from '{{name}}' collection for {{price}} {{symbol}}. Welcome to join.",
-    "nft_button_set_avatar": "Set NFT Avatar"
+    "nft_button_set_avatar": "Set NFT Avatar",
+    "plugin_omen_swap": "Swap",
+    "plugin_omen_pool": "Pool",
+    "plugin_omen_history": "History",
+    "plugin_omen_buy": "Buy",
+    "plugin_omen_sell": "Sell",
+    "plugin_omen_withdraw": "Withdraw",
+    "plugin_omen_deposit": "Deposit",
+    "plugin_omen_activities": "Activities",
+    "plugin_omen_graph": "Graph",
+    "plugin_omen_liquidity": "Liquidity",
+    "plugin_omen_total_volume": "Total Volume",
+    "plugin_omen_daily_volume": "24H Volume",
+    "plugin_omen_closing_date": "Closing Date - UTC",
+    "plugin_omen_market_not_found": "Invalid address.",
+    "plugin_omen_error_occurred": "Something went wrong!",
+    "plugin_omen_market_outcome": "Outcome",
+    "plugin_omen_market_probability": "Probability",
+    "plugin_omen_market_price": "Price",
+    "plugin_omen_market_earn_trading_fee": "Earn Trading Fee",
+    "plugin_omen_user": "User",
+    "plugin_omen_action": "Action",
+    "plugin_omen_shares_pt": "Shares/PT",
+    "plugin_omen_amount": "Amount:",
+    "plugin_omen_date_utc": "Date - UTC"
 }
