--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -39,5 +39,7 @@
     "tip_type_nft": "NFT",
     "send_tip": "Send",
     "sending_tip": "Sending...",
-    "nft_not_belong_to_you": "It doesn't belong to you"
+    "nft_not_belong_to_you": "It doesn't belong to you",
+    "send_tip_successfully": "Send tip successfully",
+    "tip_share": "Share"
 }
