--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -40,6 +40,6 @@
     "send_tip": "Send",
     "sending_tip": "Sending...",
     "nft_not_belong_to_you": "It doesn't belong to you",
-    "send_tip_successfully": "Send tip successfully",
+    "send_tip_successfully": "Sent tip successfully",
     "tip_share": "Share"
 }
