--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -43,5 +43,15 @@
     "cancel": "Cancel",
     "delete": "Delete",
     "copy_success_of_wallet_address": "Copy wallet address successfully!",
-    "disconnect_warning": "This wallet will no longer show up in your web 3 profile page. Your Mask friends can no longer give tips to this wallet, or browse NFTs, donations and other on-chain information of this address."
+    "disconnect_warning": "This wallet will no longer show up in your web 3 profile page. Your Mask friends can no longer give tips to this wallet, or browse NFTs, donations and other on-chain information of this address.",
+    "tip": "Tip",
+    "tip_to": "To",
+    "token_insufficient_balance": "Insufficient balance",
+    "tip_type_token": "Token",
+    "tip_type_nft": "NFT",
+    "send_tip": "Send",
+    "sending_tip": "Sending...",
+    "nft_not_belong_to_you": "It doesn't belong to you",
+    "send_tip_successfully": "Sent tip successfully",
+    "tip_share": "Share"
 }
