feat(ideamarket): version w/ multiaction contract

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -1018,9 +1018,13 @@
     "plugin_ideamarket_smthg_wrong": "Something went wrong",
     "plugin_ideamarket_tab_listings": "Listings",
     "plugin_ideamarket_tab_account": "Account",
-    "plugin_ideamarket_mutual_holders": "Mutual holders",
-    "plugin_ideamarket_mutual_tokens": "Mutual tokens",
-    "plugin_ideamarket_details": "Details",
+    "plugin_ideamarket_legal_text": "By checking this box, I agree to IdeaMarket's <terms>Terms of Service</terms>.",
+    "plugin_ideamarket_buy": "Buy",
+    "plugin_ideamarket_enter_an_amount": "Enter an amount",
+    "plugin_ideamarket_insufficient_balance": "Insufficient balance",
+    "plugin_ideamarket_share": "Just bought {{idea_token}} on @ideamarket_io, the literal marketplace of ideas!",
+    "plugin_ideamarket_share_no_official_account": "Just bought {{idea_token}} on @ideamarket_io, the literal marketplace of ideas!",
+    "plugin_ideamarket_check_tos_document": "Please check ToS document",
     "web3_tab_hint": "No address found.",
     "plugin_artblocks_not_active": "This project is no more active",
     "plugin_artblocks_completed": "Completed",
