--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -1015,16 +1015,15 @@
     "nft_wallet_change": "Change",
     "nft_button_add_collectible": "Add Collectible",
     "nft_avatar": "NFT Avatar",
-    "plugin_ideamarket_smthg_wrong": "Something went wrong",
+    "plugin_ideamarket_smthg_wrong": "Can't load... something went wrong",
     "plugin_ideamarket_tab_listings": "Listings",
     "plugin_ideamarket_tab_account": "Account",
-    "plugin_ideamarket_legal_text": "By checking this box, I agree to IdeaMarket's <terms>Terms of Service</terms>.",
+    "plugin_ideamarket_price": "Price",
+    "plugin_ideamarket_24h": "24H",
+    "plugin_ideamarket_deposits": "Deposits",
+    "plugin_ideamarket_name": "Name",
+    "plugin_ideamarket_sell": "Sell",
     "plugin_ideamarket_buy": "Buy",
-    "plugin_ideamarket_enter_an_amount": "Enter an amount",
-    "plugin_ideamarket_insufficient_balance": "Insufficient balance",
-    "plugin_ideamarket_share": "Just bought {{idea_token}} on @ideamarket_io, the literal marketplace of ideas!",
-    "plugin_ideamarket_share_no_official_account": "Just bought {{idea_token}} on @ideamarket_io, the literal marketplace of ideas!",
-    "plugin_ideamarket_check_tos_document": "Please check ToS document",
     "web3_tab_hint": "No address found.",
     "plugin_artblocks_not_active": "This project is no more active",
     "plugin_artblocks_completed": "Completed",
