--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -53,6 +53,7 @@
     "sending_tip": "Sending...",
     "nft_not_belong_to_you": "The collectible doesn't exist or belong to you.",
     "send_tip_successfully": "Sent tip successfully",
+    "send_specific_tip_successfully": "Sent {{amount}} {{name}} tip successfully",
     "tip_share": "Share",
     "search": "Search",
     "tip_share_post": "I just tipped {{assetName}} to @{{recipientSnsId}}'s wallet address {{recipient}}\n\nInstall https://mask.io/download-links to send my first tip."
