--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -56,6 +56,8 @@
     "send_tip_successfully": "Sent tip successfully",
     "send_specific_tip_successfully": "Sent {{amount}} {{name}} tip successfully",
     "tip_share": "Share",
+    "tip_connect_wallet_message": "Please connect to a wallet.",
+    "tip_connect_wallet": "Connect Wallet",
     "search": "Search",
     "tip_contracts": "Contracts",
     "tip_token_share_post": "I just tipped {{amount}} {{symbol}} to @{{recipientSnsId}}'s wallet address {{recipient}}\n\nInstall https://mask.io/download-links to send my first tip.",
