fix: share text

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -928,8 +928,8 @@
     "plugin_realitycards_deposit_summary": "Depositing {{amount}} {{symbol}} into Reality Cards",
     "plugin_realitycards_rent_summary": "Renting \"{{outcome}}\" for {{amount}}/hour {{symbol}}",
     "plugin_realitycards_exit_summary": "Exiting your position for the card \"{{outcome}}\"",
-    "plugin_realitycards_share_message": "I just rented \"{{outcome}}\" card for {{amount}}/hour {{cashTag}}{{symbol}}.",
-    "plugin_realitycards_follow_message": "Follow {{handle}} (mask.io) to rent your favorite card from Reality Cards!",
+    "plugin_realitycards_share_message": "I just rented \"{{outcome}}\" card for {{amount}}/hour {{symbol}}.",
+    "plugin_realitycards_follow_message": "Follow @{{handle}} (mask.io) to rent your favorite cards from Reality Cards!",
     "plugin_realitycards_winning_odds_message": "The odds of this outcome occurring, based on current market sentiment. Calculated as the rental price of this Card, divided by the sum of rental prices of all Cards, expressed as a percentage",
     "plugin_realitycards_event_description_title": "Event Description",
     "plugin_realitycards_event_description_opening_time": "Opening Time",
