--- a/packages/plugins/GoPlusSecurity/src/locales/en-US.json
+++ b/packages/plugins/GoPlusSecurity/src/locales/en-US.json
@@ -45,6 +45,8 @@
     "risk_owner_can_not_change_balance_body": "The contract owner is not found to have the authority to modify the balance of tokens at other addresses.",
     "risk_buy_tax_title": "Buy Tax",
     "risk_buy_tax_body": "Above 10% may be considered a high tax rate. More than 50% tax rate means may not be tradable.",
+    "risk_sell_tax_title": "Sell Tax",
+    "risk_sell_tax_body": "Above 10% may be considered a high tax rate. More than 50% tax rate means may not be tradable.",
     "risk_is_honeypot_title": "May the token is a honeypot.",
     "risk_is_honeypot_body": "This token contract has a code that states that it cannot be sold. Maybe this is a honeypot.",
     "risk_is_not_honeypot_title": "This does not appear to be a honeypot.",
