fix: build error

--- a/packages/plugins/ENS/src/locales/en-US.json
+++ b/packages/plugins/ENS/src/locales/en-US.json
@@ -7,5 +7,9 @@
     "registrant": "REGISTRANT",
     "controller": "CONTROLLER",
     "expiration_date": "EXPIRATION DATE",
-    "buy": "buy"
+    "buy": "buy",
+    "Ethereum Name Service": "Ethereum Name Service",
+    "resolver": "resolver",
+    "owner": "owner",
+    "ttl": "time-to-live"
 }
