--- a/packages/mask/shared-ui/locales/ja-JP.json
+++ b/packages/mask/shared-ui/locales/ja-JP.json
@@ -239,7 +239,7 @@
     "plugin_ito_qualification_start_time": "参加資格開始時間：",
     "plugin_ito_error_qualification_start_time": "無効：資格開始時間は ITO の終了時間よりも前でなくてはいけません",
     "plugin_ito_error_invalid_qualification": "無効な資格アドレス",
-    "plugin_ito_unlock_time": "ロック解除時間 {{zone}}",
+    "plugin_ito_unlock_time": "ロック解除時間",
     "plugin_ito_qualification_label": "プラグインのコントラクト",
     "plugin_ito_message_label": "タイトル",
     "plugin_ito_region_label": "IP リージョンの選択",
