--- a/packages/mask/shared-ui/locales/zh-CN.json
+++ b/packages/mask/shared-ui/locales/zh-CN.json
@@ -532,7 +532,7 @@
     "plugin_ito_error_qualification_start_time": "无效：资格认证开始时间应该早于ITO结束时间",
     "plugin_ito_error_invalid_qualification": "无效的资格认证地址",
     "plugin_ito_unlock_time_cert": "ITO Mask 解锁时间为 {{date}}。",
-    "plugin_ito_unlock_time": "解锁时间 {{zone}}",
+    "plugin_ito_unlock_time": "解锁时间",
     "plugin_ito_total_claimable_count": "总计: ",
     "plugin_ito_qualification_label": "插件合约",
     "plugin_ito_message_label": "标题",
