--- a/packages/plugins/GoPlusSecurity/src/locales/en-US.json
+++ b/packages/plugins/GoPlusSecurity/src/locales/en-US.json
@@ -11,6 +11,8 @@
     "security_detection": "Security Detection",
     "risky_factors": "{{quantity}} Risky factors",
     "attention_factors": "{{quantity}} Attention factors",
+    "risky_factor": "{{quantity}} Risky factor",
+    "attention_factor": "{{quantity}} Attention factor",
     "security_info_code_not_verify_title": "Contract source code not verified",
     "security_info_code_not_verify_message": "This token contract has not been verified. We cannot check the contract code for details. Unsourced token contracts are likely to have malicious functions to defraud users of their assets",
     "security_info_functions_that_can_suspend_trading_title": "Functions that can suspend trading",
@@ -21,7 +23,10 @@
     "token_info_contract_owner": "Contract Owner",
     "token_info_total_supply": "Total Supply",
     "default_placeholder": "Note: Scams detections might not be 100% guaranteed.",
-    "not_found_tip": "Network error or the on-chain data is abnormal. Please switch to the correct network or check the address again.",
+    "not_found_tip_title": "Results not found now. it might be chain network error, on-chain data abnormal or the token address is not covered now. please check as followings:",
+    "not_found_tip_network_error": "1. Make sure network is working;",
+    "not_found_tip_network_chain_correct": "2. Mask sure the chain network or token address is correct;",
+    "not_found_tip_network_address_not_cover": "3. Token address is not covered now, it might take more than 60s to get contract information again. Please try it later.",
     "risk_safe_description": "This token has no risky or attention factors.",
     "risk_contract_source_code_verified_title": "Contract source code verified",
     "risk_contract_source_code_verified_body": "This token contract is open source. You can check the contract code for details. Unsourced token contracts are likely to have malicious functions to defraud their users of their assets.",
