--- a/packages/plugins/ENS/src/locales/en-US.json
+++ b/packages/plugins/ENS/src/locales/en-US.json
@@ -3,7 +3,7 @@
     "__entry__": "🤔 Example",
     "ens": "Etherenum Name Service",
     "search": "search",
-    "parent": "PARENT",
+    "parent": "parent",
     "registrant": "REGISTRANT",
     "controller": "CONTROLLER",
     "expiration_date": "EXPIRATION DATE",
