--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -62,5 +62,10 @@
     "tip_contracts": "Contracts",
     "tip_mask_promote": "Install https://mask.io/download-links to send your first tip.",
     "tip_token_share_post": "I just tipped {{amount}} {{symbol}} to @{{recipientSnsId}}'s wallet address {{recipient}}\n\n{{promote}}",
-    "tip_nft_share_post": "I just tipped a {{name}} to @{{recipientSnsId}}'s wallet address {{recipient}}\n\n{{promote}}"
+    "tip_nft_share_post": "I just tipped a {{name}} to @{{recipientSnsId}}'s wallet address {{recipient}}\n\n{{promote}}",
+    "tip_add": "Add",
+    "tip_add_collectibles": "Add collectibles",
+    "tip_add_collectibles_contract_address": "Input contract address",
+    "tip_add_collectibles_token_id": "Token ID",
+    "tip_add_collectibles_error": "The contract address is incorrect or the collection does not belong to you"
 }
