feat: popup bottom navigator

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -118,9 +118,14 @@
     "payload_not_found": "Payload not found.",
     "payload_throw_in_alpha41": "Support for Alpha41 is deprecated. Tell your friends to upgrade Mask!",
     "personas": "Personas",
+    "wallet": "Wallet",
+    "dashboard": "Dashboard",
+    "welcome_to_mask": "Welcome to Mask Network",
+    "welcome_description_congrats": "Congrats, you are in Web3!",
+    "welcome_description_content": "Explore the hottest NFTs, DAOs, ",
+    "welcome_description_content_second": "crypto trends with Mask Network.",
     "browser_action_enter_dashboard": "Enter Dashboard",
     "pending": "Pending...",
-    "popups_initial_tips": "Please sign in or sign up to use the {{type}}.",
     "beta_sup": "<sup>(beta)<sup>",
     "post_dialog_plugins_experimental": "Plugins <sup>(Experimental)</sup>",
     "post_dialog__button": "Encrypt",
