--- a/packages/plugins/CrossChainBridge/src/locales/en-US.json
+++ b/packages/plugins/CrossChainBridge/src/locales/en-US.json
@@ -1,6 +1,6 @@
 {
-    "name": "Example Plugin",
-    "__entry__": "🤔 Example",
     "dialog_title": "Cross-chain",
-    "official": "Official"
+    "official": "Official",
+    "cbridge_intro": "Powered by Celer Network. Support $Mask!",
+    "rainbow_bridge_intro": "Bridge between or send within Ethereum, NEAR and Aurora! "
 }
