fix: add loading status

--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -53,8 +53,8 @@
     "send_tip": "Send",
     "sending_tip": "Sending...",
     "nft_not_belong_to_you": "The collectible doesn't exist or belong to you.",
-    "send_tip_successfully": "Sent tip successfully",
-    "send_specific_tip_successfully": "Sent {{amount}} {{name}} tip successfully",
+    "send_tip_successfully": "Sent tip successfully.",
+    "send_specific_tip_successfully": "Sent {{amount}} {{name}} tip successfully.",
     "tip_share": "Share",
     "tip_connect_wallet_message": "Please connect to a wallet.",
     "tip_connect_wallet": "Connect Wallet",
