feat: new header for popup

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -907,6 +907,19 @@
     "plugin_pets_dialog_success": "Your Non-Fungible Friend has been set up successfully",
     "plugin_pets_dialog_fail": "Setting failed, please try later",
     "plugin_pets_dialog_check_title": "Show NFT friends on the profile page.",
+    "popups_add_derive": "Add Derive",
+    "popups_account_details": "Account Details",
+    "popups_rename": "Rename",
+    "popups_delete_wallet": "Delete Wallet",
+    "popups_create_wallet": "Create Wallet",
+    "popups_back_up_the_wallet": "Back up the wallet",
+    "popups_recovery_wallet": "Wallet Recovered",
+    "popups_gas_fee_settings": "Gas fee settings",
+    "popups_assets": "Assets",
+    "popups_contract_interaction": "Contract Interaction",
+    "popups_send": "Send",
+    "popups_set_the_payment_password": "Set the payment password",
+    "popups_log_out": "Log out",
     "popups_following_permissions": "The plugin ({{pluginName}}) (hosted on {{pluginURL}}) is going to request the following permissions:",
     "popups_permissions": "Permissions",
     "popups_sites": "Sites",
