fix: adjust header for ssr

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -143,7 +143,6 @@
     "reset": "Reset",
     "editor": "Editor",
     "retry": "Retry",
-    "rename": "Rename",
     "search": "Search",
     "go_wrong": "Something went wrong.",
     "search_box_placeholder": "Type here to search",
@@ -894,13 +893,13 @@
     "popups_add_derive": "Add Derive",
     "popups_account_details": "Account Details",
     "popups_rename": "Rename",
+    "popups_import_the_wallet": "Import the wallet",
     "popups_delete_wallet": "Delete Wallet",
     "popups_create_wallet": "Create Wallet",
     "popups_back_up_the_wallet": "Back up the wallet",
     "popups_recovery_wallet": "Wallet Recovered",
     "popups_gas_fee_settings": "Gas fee settings",
     "popups_assets": "Assets",
-    "popups_contract_interaction": "Contract Interaction",
     "popups_send": "Send",
     "popups_set_the_payment_password": "Set the payment password",
     "popups_log_out": "Log out",
