--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -67,7 +67,7 @@
     "tip_add_collectibles": "Add Collectibles",
     "tip_add_collectibles_contract_address": "Input contract address",
     "tip_add_collectibles_token_id": "Token ID",
-    "tip_add_collectibles_error": "The contract address is incorrect or the collection does not belong to you",
+    "tip_add_collectibles_error": "The contract address is incorrect or the collectible does not belong to you.",
     "tip_loading": "Loading",
     "tip_empty_nft": "No any collectible is available to preview. Please add your collectible here."
 }
