--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -1031,6 +1031,5 @@
     "plugin_artblocks_smt_wrong": "Something went wrong!",
     "plugin_artblocks_share": "I just purchased a beautiful piece of art from '{{name}}' collection for {{price}} {{symbol}}. Install @realMaskNetwork to get yours.",
     "plugin_artblocks_share_no_official_account": "I just purchased a beautiful piece of art from '{{name}}' collection for {{price}} {{symbol}}. Welcome to join.",
-    "nft_button_set_avatar": "Set NFT Avatar",
-    "plugin_tips_name": "Tips"
+    "nft_button_set_avatar": "Set NFT Avatar"
 }
