feat(ideamarket): fix build conflicts

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -995,6 +995,8 @@
     "plugin_ideamarket_tab_listings": "Listings",
     "plugin_ideamarket_tab_account": "Account",
     "plugin_ideamarket_price": "Price",
+    "plugin_ideamarket_balance": "Balance",
+    "plugin_ideamarket_value": "Value",
     "plugin_ideamarket_24h": "24H",
     "plugin_ideamarket_deposits": "Deposits",
     "plugin_ideamarket_name": "Name",
