--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -32,6 +32,7 @@
     "application_settings": "Application Settings",
     "application_settings_tab_app_list": "APP list",
     "application_settings_tab_plug_in_switch": "Plug-in switch",
+    "application_settings_tab_plug_app-list-unlisted": "Unlisted",
     "additional_post_box__encrypted_post_pre": "Decrypt this post with #mask_io ! {{encrypted}}",
     "additional_post_box__encrypted_post_pre_red_packet_twitter_official_account": "Hi, claim this lucky drop with #mask_io @{{account}} {{encrypted}}",
     "additional_post_box__encrypted_post_pre_red_packet": "Hi, claim this lucky drop with #mask_io {{encrypted}}",
