feat: new persona page

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -890,6 +890,18 @@
     "plugin_pets_dialog_success": "Your Non-Fungible Friend has been set up successfully",
     "plugin_pets_dialog_fail": "Setting failed, please try later",
     "plugin_pets_dialog_check_title": "Show NFT friends on the profile page.",
+    "popups_profile_photo": "Profile Photo",
+    "popups_next_id": "Next.Id",
+    "popups_name": "Name",
+    "popups_social_account": "Social Accounts",
+    "popups_connected_wallets": "Connected Wallets",
+    "popups_connect_your_web2_social_accounts": "Connect your web2 social accounts",
+    "popups_connect_social_account": "Connect Social Account",
+    "popups_verify_warning_alert": "Your current account has not been verified. Please switch to your current Twitter account to verify.",
+    "popups_disconnect_warning_alert": "Are you sure to disconnect Persona {{persona}} from {{network}} {{account}}?",
+    "popups_verify_account": "Verify Account",
+    "popups_disconnect_wallet_tip": "Are you sure to disconnect {{persona}} from wallet <strong>{{address}}<strong/>?",
+    "popups_add_and_verify_wallet": "Add and verify Wallet",
     "popups_add_derive": "Add Derive",
     "popups_account_details": "Account Details",
     "popups_rename": "Rename",
