--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -996,8 +996,8 @@
     "popups_persona_connect_to": "Connect to {{type}}",
     "popups_persona_to_be_verified": "To be verified",
     "popups_persona_disconnect": "Disconnect",
-    "popups_persona_disconnect_confirmation": "Disconnect confirmation?",
-    "popups_persona_disconnect_confirmation_description": "This persona verification record will no longer show up in your verification profile page. Your\n Mask friends can no longer send encrypted message to you by this persona or check your Web 3\n products",
+    "popups_persona_disconnect_confirmation": "Disconnect confirmation",
+    "popups_persona_disconnect_confirmation_description": "This persona verification record will no longer show up in your verification profile page. Your\n Mask friends can no longer send encrypted message to you by this persona or check your Web 3\n products.",
     "popups_persona": "Persona",
     "popups_twitter_id": "Twitter ID",
     "popups_persona_logout": "Log out",
