--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -1002,7 +1002,7 @@
     "popups_twitter_id": "Twitter ID",
     "popups_persona_logout": "Log out",
     "popups_persona_disconnect_tip": "After logging out, your associated social accounts can no longer decrypt past encrypted messages. If you need to reuse your account, you can recover your account with your identity, private key, local or cloud backup.",
-    "popups_persona_persona_name_exists": "The persona name already exists",
+    "popups_persona_persona_name_exists": "The persona name already exists.",
     "popups_persona_sign_request_title": "Signature request",
     "popups_persona_sign_request_message": "message",
     "popups_password_do_not_match": "Incorrect backup password",
