--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -61,10 +61,10 @@
     "copy_success_of_text": "Copy text successfully!",
     "copy_success_of_image": "Copy image successfully!",
     "connecting": "Connecting…",
+    "collectibles_name": "Collectibles",
     "create": "Create",
     "copied": "Copied",
     "daily": "Daily",
-    "dashboard_tab_collectibles": "Collectibles",
     "dashboard_no_collectible_found": "No collectible found.",
     "dashboard_collectible_menu_all": "All ({{count}})",
     "days": "Every {{days}} days",
