--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -321,6 +321,8 @@
     "plugin_red_packet_claimed": "Claimed",
     "plugin_red_packet_erc20_tab_title": "Token",
     "plugin_red_packet_erc721_tab_title": "Collectibles",
+    "plugin_red_packet_name": "Lucky Drop",
+    "plugin_red_packet_description": "Gift crypto or NFTs to any users, first come, first served.",
     "plugin_red_packet_erc721_insufficient_balance": "Insufficient Balance",
     "plugin_red_packet_details": "Lucky Drop Details",
     "plugin_red_packet_split_mode": "Split Mode",
@@ -392,6 +394,8 @@
     "plugin_gitcoin_readme": "By using this service, you will also be contributing 5% of your contribution to the <fund>Gitcoin grants development fund</fund>.",
     "plugin_gitcoin_readme_fund_link": "https://gitcoin.co/grants/86/gitcoin-sustainability-fund",
     "plugin_gitcoin_select_a_token": "Select a token",
+    "plugin_gitcoin_name": "Gitcoin",
+    "plugin_gitcoin_description": "Display specific information of Gitcoin projects, donate to a project directly on social media.",
     "plugin_gitcoin_enter_an_amount": "Enter an amount",
     "plugin_gitcoin_grant_not_available": "Grant not available",
     "plugin_gitcoin_insufficient_balance": "Insufficient {{symbol}} balance",
@@ -401,6 +405,7 @@
     "plugin_gitcoin_view_on": "View on Gitcoin",
     "plugin_trader_fail_to_load": "Fail to load trending info from  ",
     "plugin_trader_lbp_pool_in_balancer": "LBP Pool in Balancer",
+    "plugin_trader_swap_description": "Pop-up trading widget allows you to instantly view prices of the hottest Crypto/Stock and trade, also invest in the best performing managers.",
     "plugin_trader_tutorial": "Tutorial",
     "plugin_trader_what_is_lbp": "What's LBP?",
     "plugin_trader_lbp_intro": "Solid blue line illustrates the historical price of {{symbol}} on the {{symbol}}'s LBP. The price could continue to go down if no one buys. Please make your investment decision wisely.",
@@ -552,6 +557,8 @@
     "plugin_ito_region_search": "Type region name to search",
     "plugin_ito_region_ban": "This Pool is banned by its creator at your region",
     "plugin_ito_next": "Next",
+    "plugin_ito_name": "ITO",
+    "plugin_ito_description": "Launch decentralized asset freely and participate in token launch directly on Twitter.",
     "plugin_ito_back": "Back",
     "plugin_ito_transaction_dialog_summary_with_no_token": "Create an ITO.",
     "plugin_ito_transaction_dialog_summary": "Create an ITO with {{amount}} {{symbol}}.",
@@ -722,6 +729,7 @@
     "plugin_snapshot_info_start": "Start date",
     "plugin_snapshot_info_end": "End date",
     "plugin_snapshot_info_snapshot": "Snapshot",
+    "plugin_snapshot_description": "Display and vote for proposals directly on social media.",
     "plugin_snapshot_result_title": "Results",
     "plugin_snapshot_votes_title": "Votes",
     "plugin_snapshot_no_power": "No power",
@@ -753,6 +761,7 @@
     "plugin_find_truman_vote": "vote",
     "plugin_find_truman_votes": "votes",
     "plugin_find_truman_selected": "Selected",
+    "plugin_find_truman_name": "FindTruman",
     "plugin_find_truman_unselect": "Select",
     "plugin_find_truman_answer": "Answer",
     "plugin_find_truman_result": "Result",
@@ -784,6 +793,8 @@
     "plugin_dhedge_pool_not_found": "Invalid pool address.",
     "plugin_dhedge_smt_wrong": "Something went wrong!",
     "plugin_pooltogether_tab_pools": "Pools",
+    "plugin_pooltogether_name": "PoolTogether",
+    "plugin_pooltogether_description": "Participate in lossless lottery on Twitter.",
     "plugin_pooltogether_tab_account": "Account",
     "plugin_pooltogether_no_pool": "There is no pool on this network.",
     "plugin_pooltogether_pool_ended": "Awarded",
@@ -879,6 +890,8 @@
     "plugin_furucombo_head_pools": "Pools",
     "plugin_furucombo_head_action": "Action",
     "plugin_pets_dialog_title": "Non-Fungible Friends",
+    "plugin_pets_name": "Non-F Friends",
+    "plugin_pets_description": "Explore the endless possibilities of NFTs.",
     "plugin_pets_dialog_title_share": "Successful",
     "plugin_pets_dialog_contract": "NFT Contract",
     "plugin_pets_dialog_token": "Token ID",
@@ -1021,5 +1034,24 @@
     "plugin_artblocks_smt_wrong": "Something went wrong!",
     "plugin_artblocks_share": "I just purchased a beautiful piece of art from '{{name}}' collection for {{price}} {{symbol}}. Install @realMaskNetwork to get yours.",
     "plugin_artblocks_share_no_official_account": "I just purchased a beautiful piece of art from '{{name}}' collection for {{price}} {{symbol}}. Welcome to join.",
-    "nft_button_set_avatar": "Set NFT Avatar"
+    "plugin_artblocks_description": "Artblocks allow you to pick a style that you like, pay for the work, and a randomly generated version of the content is created by an algorithm and sent to your Ethereum account.",
+    "plugin_artblocks_name": "Artblocks",
+    "plugin_collectibles_name": "Collectibles",
+    "plugin_dhedge_description": "Decentralized hedge funds on Ethereum and Polygon (Matic).",
+    "plugin_dhedge_name": "dHEDGE",
+    "nft_button_set_avatar": "Set NFT Avatar",
+    "plugin_good_ghosting_name": "GoodGhosting",
+    "plugin_good_ghosting_description": "Cultivate a weekly saving habit on Twitter.",
+    "plugin_mask_box_name": "MaskBox",
+    "plugin_mask_box_description": "Professional multi-chain decentralized platform for launching NFT mystery boxes.",
+    "plugin_transak_name": "Fiat On-Ramp",
+    "plugin_transak_description": "Fiat On-Ramp Aggregator on Twitter. Buy crypto in 60+ countries with Transak support.",
+    "plugin_valuables_name": "Valuables",
+    "plugin_valuables_description": "Buy & sell tweets autographed by their original creators.",
+    "plugin_cross_bridge_name": "Cross-chain",
+    "plugin_cyber_connect_name": "CyberConnect",
+    "plugin_cyber_connect_description": "Decentralized social graph protocol for user-centric Web3.",
+    "plugin_file_service_name": "File Service",
+    "plugin_file_service_description": "Decentralized file storage, permanently. Upload and share files to your Mask friends on top of Arweave Network.",
+    "plugin_go_plus_security_name": "Check Security"
 }
