fix: bugfix for header

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -903,13 +903,13 @@
     "popups_disconnect_wallet_tip": "Are you sure to disconnect {{persona}} from wallet <strong>{{address}}<strong/>?",
     "popups_add_and_verify_wallet": "Add and verify Wallet",
     "popups_add_derive": "Add Derive",
-    "popups_account_details": "Account Details",
     "popups_rename": "Rename",
     "popups_import_the_wallet": "Import the wallet",
     "popups_delete_wallet": "Delete Wallet",
     "popups_create_wallet": "Create Wallet",
     "popups_back_up_the_wallet": "Back up the wallet",
     "popups_recovery_wallet": "Wallet Recovered",
+    "popups_wallet_setting": "Wallet Setting",
     "popups_gas_fee_settings": "Gas fee settings",
     "popups_assets": "Assets",
     "popups_send": "Send",
