--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -251,6 +251,12 @@
     "relative_time_seconds_ago": "{{seconds}} seconds ago",
     "relative_time_years_ago": "{{years}} years ago",
     "plugin_chain_not_supported": "Not supported on {{chain}} yet.",
+    "plugin_cross_bridge_name": "Cross-chain",
+    "plugin_cyber_connect_name": "CyberConnect",
+    "plugin_cyber_connect_description": "Decentralized social graph protocol for user-centric Web3.",
+    "plugin_file_service_name": "File Service",
+    "plugin_file_service_description": "Decentralized file storage, permanently. Upload and share files to your Mask friends on top of Arweave Network.",
+    "plugin_go_plus_security_name": "Check Security",
     "plugin_wallet_snackbar_wait_for_confirming": "Confirm this transaction in your wallet",
     "plugin_wallet_snackbar_hash": "Transaction Submitted",
     "plugin_wallet_snackbar_confirmed": "Transaction Confirmed",
@@ -697,6 +703,8 @@
     "plugin_collectible_make_an_offer": "Make an Offer",
     "plugin_collectible_approved_by_open_sea": "By checking this box, I acknowledge that this item has not been reviewed or approved by OpenSea.",
     "plugin_collectible_legal_text": "By checking this box, I agree to OpenSea's <terms>Terms of Service</terms>.",
+    "plugin_collectibles_name": "Collectibles",
+    "plugin_collectibles_description": "Display specific information of collectibles in OpenSea and Rarible, make an offer directly on social media.",
     "plugin_cryptoartai_description_title": "Description",
     "plugin_cryptoartai_edition": "Edition of",
     "plugin_cryptoartai_operator": "Operator",
@@ -1036,7 +1044,6 @@
     "plugin_artblocks_share_no_official_account": "I just purchased a beautiful piece of art from '{{name}}' collection for {{price}} {{symbol}}. Welcome to join.",
     "plugin_artblocks_description": "Artblocks allow you to pick a style that you like, pay for the work, and a randomly generated version of the content is created by an algorithm and sent to your Ethereum account.",
     "plugin_artblocks_name": "Artblocks",
-    "plugin_collectibles_name": "Collectibles",
     "plugin_dhedge_description": "Decentralized hedge funds on Ethereum and Polygon (Matic).",
     "plugin_dhedge_name": "dHEDGE",
     "nft_button_set_avatar": "Set NFT Avatar",
@@ -1047,11 +1054,5 @@
     "plugin_transak_name": "Fiat On-Ramp",
     "plugin_transak_description": "Fiat On-Ramp Aggregator on Twitter. Buy crypto in 60+ countries with Transak support.",
     "plugin_valuables_name": "Valuables",
-    "plugin_valuables_description": "Buy & sell tweets autographed by their original creators.",
-    "plugin_cross_bridge_name": "Cross-chain",
-    "plugin_cyber_connect_name": "CyberConnect",
-    "plugin_cyber_connect_description": "Decentralized social graph protocol for user-centric Web3.",
-    "plugin_file_service_name": "File Service",
-    "plugin_file_service_description": "Decentralized file storage, permanently. Upload and share files to your Mask friends on top of Arweave Network.",
-    "plugin_go_plus_security_name": "Check Security"
+    "plugin_valuables_description": "Buy & sell tweets autographed by their original creators."
 }
