--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -284,6 +284,9 @@
     "plugin_wallet_transaction_submitted": "Your transaction was submitted!",
     "plugin_wallet_transaction_confirmed": "Your transaction was confirmed!",
     "plugin_wallet_transaction_reverted": "Transaction was reverted!",
+    "plugin_wallet_transaction_rejected": "Transaction was rejected!",
+    "plugin_wallet_transaction_underpriced": "Transaction underpriced.",
+    "plugin_wallet_transaction_server_error": "Transaction was failed due to an internal JSON-RPC server error.",
     "plugin_wallet_view_on_explorer": "View on Explorer",
     "plugin_ito_placeholder_when_token_unselected": "Please Select a Token first",
     "plugin_wallet_wrong_network_tip": "Please connect to an appropriate network.",
@@ -311,6 +314,7 @@
     "plugin_wallet_connect_wallet_tip": "Please connect to a wallet.",
     "plugin_wallet_name_placeholder": "Enter 1-12 characters",
     "plugin_wallet_fail_to_sign": "Failed to sign password.",
+    "plugin_wallet_cancel_sign": "Signature canceled.",
     "plugin_red_packet_display_name": "Plugin: Lucky Drop",
     "plugin_red_packet_claimed": "Claimed",
     "plugin_red_packet_erc20_tab_title": "Token",
@@ -897,7 +901,7 @@
     "popups_verify_warning_alert": "Your current account has not been verified. Please switch to your current Twitter account to verify.",
     "popups_disconnect_warning_alert": "Are you sure to disconnect Persona {{persona}} from {{network}} {{account}}?",
     "popups_verify_account": "Verify Account",
-    "popups_disconnect_wallet_tip": "Are you sure to disconnect persona from wallet <strong>{{address}}<strong/>?",
+    "popups_disconnect_wallet_tip": "Are you sure to disconnect {{persona}} from wallet <strong>{{address}}<strong/>?",
     "popups_add_and_verify_wallet": "Add and verify Wallet",
     "popups_add_derive": "Add Derive",
     "popups_rename": "Rename",
