--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -981,7 +981,7 @@
     "popups_wallet_password_satisfied_requirement": "The password is not satisfied the requirement.",
     "popups_wallet_password_length_error": "The password length is incorrect.",
     "popups_wallet_unlock_wallet": "Unlock Wallet",
-    "popups_wallet_unlock_error_password": "Password is incorrect",
+    "popups_wallet_unlock_error_password": "Password is incorrect.",
     "popups_wallet_activity_to_address": "To: {{address}}",
     "popups_wallet_transfer_error_tip": "Network connection failure or contract error, send transaction failure.",
     "popups_wallet_transactions_pending": "Pending...",
