--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -896,6 +896,8 @@
     "popups_connected_wallets": "Connected Wallets",
     "popups_connect_your_web2_social_accounts": "Connect your web2 social accounts",
     "popups_connect_social_account": "Connect Social Account",
+    "popups_disconnect_success": " Disconnect successfully. ",
+    "popups_disconnect_failed": "Disconnect failed.",
     "popups_verify_warning_alert": "Your current account has not been verified. Please switch to your current Twitter account to verify.",
     "popups_disconnect_warning_alert": "Are you sure to disconnect Persona {{persona}} from {{network}} {{account}}?",
     "popups_verify_account": "Verify Account",
