--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -888,6 +888,11 @@
     "plugin_pets_dialog_success": "Your Non-Fungible Friend has been set up successfully",
     "plugin_pets_dialog_fail": "Setting failed, please try later",
     "plugin_pets_dialog_check_title": "Show NFT friends on the profile page.",
+    "wallet_verify_persona_sign": "Persona Sign",
+    "wallet_verify_has_bound": "The wallet has been bound. Please switch wallets.",
+    "wallet_verify_persona_name": "{{personaName}} Sign",
+    "wallet_verify_persona_sign_intro": "Sign seamlessly with Persona, ensure the validity of data.",
+    "waller_verify_wallet_sign_intro": "After two steps, you will own, view, utilize all your cyber identities through Next.ID. You can also disconnect them easily.",
     "popups_add_wallet": "Add Wallet",
     "popups_profile_photo": "Profile Photo",
     "popups_public_key": "Public Key",
