--- a/packages/plugins/CyberConnect/src/locales/en-US.json
+++ b/packages/plugins/CyberConnect/src/locales/en-US.json
@@ -1,4 +1,4 @@
 {
-    "plugin_name": "CyberConnect",
-    "plugin_description": "Decentralized social graph protocol for user-centric Web3."
+    "__plugin_name": "CyberConnect",
+    "__plugin_description": "Decentralized social graph protocol for user-centric Web3."
 }
