--- a/packages/plugins/Web3Profile/src/locales/en-US.json
+++ b/packages/plugins/Web3Profile/src/locales/en-US.json
@@ -1,4 +1,5 @@
 {
     "persona_publick_key_copy": "persona_publick_key_copy",
-    "current": "Current"
+    "current": "Current",
+    "plugin_wallet_view_on_explorer": "plugin_wallet_view_on_explorer"
 }
