--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -906,12 +906,12 @@
     "popups_verify_warning_alert": "Your current account has not been verified. Please switch to your current Twitter account to verify.",
     "popups_disconnect_warning_alert": "Are you sure to disconnect Persona {{persona}} from {{network}} {{account}}?",
     "popups_verify_account": "Verify Account",
-    "popups_disconnect_wallet_tip": "Are you sure to disconnect persona from wallet <strong>{{address}}<strong/>?",
+    "popups_disconnect_wallet_tip": "Are you sure to disconnect {{persona}} from wallet <strong>{{address}}<strong/>?",
     "popups_add_and_verify_wallet": "Add and verify Wallet",
     "popups_add_derive": "Add Derive",
     "popups_rename": "Rename",
     "popups_import_the_wallet": "Import the wallet",
-    "popups_delete_wallet": "Delete Wallet",
+    "popups_delete_wallet": "Disconnect Wallet",
     "popups_create_wallet": "Create Wallet",
     "popups_back_up_the_wallet": "Back up the wallet",
     "popups_recovery_wallet": "Wallet Recovered",
