--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -899,6 +899,9 @@
     "popups_name": "Name",
     "popups_social_account": "Social Accounts",
     "popups_connected_wallets": "Connected Wallets",
+    "popups_loading": "Loading",
+    "popups_wallet_disconnect_success": "Wallet disconnect successfully",
+    "popups_wallet_disconnect_failed": "Wallet disconnect failed",
     "popups_connect_your_web2_social_accounts": "Connect your web2 social accounts",
     "popups_connect_social_account": "Connect Social Account",
     "popups_disconnect_success": " Disconnect successfully. ",
