--- a/packages/mask/src/plugins/Avatar/locales/en-US.json
+++ b/packages/mask/src/plugins/Avatar/locales/en-US.json
@@ -13,5 +13,7 @@
     "add_collectible": "Add collectibles",
     "set_avatar_title": "Set NFT Avatar",
     "wallet_settings": "Wallet settings",
-    "persona_hint": "Customize NFT experience by connecting social accounts. Enjoy Web2 with a whole new Web3 vibe."
+    "persona_hint": "Customize NFT experience by connecting social accounts. Enjoy Web2 with a whole new Web3 vibe.",
+    "copy_success_of_wallet_address": "Copy wallet address successfully!",
+    "copied": "Copied"
 }
