--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -954,7 +954,7 @@
     "popups_wallet_imported_group_title": "Imported Wallets",
     "popups_backup_persona": "Backup Persona",
     "popups_persona_rename_tips": "Persona name must between 1 to 24 characters.",
-    "popups_backup_password_rules": "Password should contain uppercase and lowercase letters, special characters and numbers. ",
+    "popups_backup_password_rules": "Password should contain uppercase and lowercase letters, special characters and numbers.",
     "popups_backup_password_rules_tips": "Backup password must be 8-20 characters, including uppercase, lowercase, special characters and numbers.",
     "popups_backup_password_tips": "Please set up backup password to export private key.",
     "popups_backup_password_inconsistency": "The two entered passwords are inconsistent.",
@@ -1019,6 +1019,9 @@
     "popups_settings_supported_sites_description": "Manage the permissions of the Mask Network plugin to inject into websites. Once turned off, the use of the plugin on this site will no longer be supported.",
     "popups_settings_supported_website_one": "<strong>{{count}}<strong> Website",
     "popups_settings_supported_website_other": "<strong>{{count}}<strong> Websites",
+    "popups_settings_set_backup_password": "Change Backup Password",
+    "popups_settings_new_backup_password": "New password",
+    "popups_settings_new_backup_password_error_tips": "New password cannot be the same as your current password.",
     "nft_wallet_label": "Wallet",
     "plugin_profile_no_wallets": "Connect your wallet here.<br/>This section will be shown to your encrypted friends.<br/>The display content includes digital art, donations, badges<br/>and other public information on chain.",
     "nft_input_address_label": "Please input contract address",
